[gd_scene load_steps=4 format=3 uid="uid://dedxlb313546h"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_0cck7"]
[ext_resource type="Texture2D" uid="uid://c7pjpo5jjy7a2" path="res://graphics/player/player.png" id="1_w0ypg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_q4ci8"]
radius = 65.0

[node name="Player" type="CharacterBody2D"]
collision_mask = 31
script = ExtResource("1_0cck7")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(29, -2)
rotation = 1.5708
texture = ExtResource("1_w0ypg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3, 0)
shape = SubResource("CircleShape2D_q4ci8")

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MarkerNode" type="Node2D" parent="."]
position = Vector2(19, -130)

[node name="Marker2D" type="Marker2D" parent="MarkerNode"]
position = Vector2(106, 148)

[node name="Marker2D2" type="Marker2D" parent="MarkerNode"]
position = Vector2(102, 140)

[node name="Marker2D3" type="Marker2D" parent="MarkerNode"]
position = Vector2(102, 157)

[connection signal="timeout" from="LaserTimer" to="." method="_on_laser_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
